Slider fix overflow

--- a/src/app/components/external/slider/slider.component.scss
+++ b/src/app/components/external/slider/slider.component.scss
@@ -1,6 +1,14 @@
+.slick-initialized {
+  overflow: hidden !important;
+}
+
 .slide {
+  overflow-x: hidden;
   &__img {
     max-width: 100%;
     max-height: 30rem;
+  }
+  &__text {
+    text-align: center;
   }
 }
